--- a/book/gee.ipynb
+++ b/book/gee.ipynb
@@ -5,6 +5,11 @@
    "id": "0",
    "metadata": {},
    "source": [
+    "# Google earth engine\n",
+    "'''{contents}\n",
+    "\n",
+    "'''\n",
+    "\n",
     "**Interactive mapping and analysis of geospatial big data using geemap and Google Earth Engine**\n",
     "\n",
     "This notebook was developed for the geemap workshop at the [GeoPython 2021 Conference](https://2021.geopython.net).\n",
