--- a/_sources/book/gee.ipynb
+++ b/_sources/book/gee.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Google earth engine\n",
-    "'''{contents}\n",
+    "```{contents}\n",
     "\n",
-    "'''\n",
+    "```\n",
     "\n",
     "**Interactive mapping and analysis of geospatial big data using geemap and Google Earth Engine**\n",
     "\n",
